--- a/templates/listing.html.jinja
+++ b/templates/listing.html.jinja
@@ -19,8 +19,8 @@ window.addEventListener("load", function onLoad() {
 
 {% block body %}
 
-<h1>HTTPSWatch</h1>
-<p>HTTPSWatch tracks the HTTPS support of prominent websites. Click to show details about a site&rsquo;s HTTPS support. See the <a href="/about">About page</a> for more information.
+<h1>HTTPSWatchAU</h1>
+<p>HTTPSWatchAU tracks the HTTPS support of prominent Australian websites. Click to show details about a site&rsquo;s HTTPS support. See the <a href="/about">About page</a> for more information.
 
 <nav class="main-toc">
   <ul class="nav-list">
