--- a/templates/about.html.jinja
+++ b/templates/about.html.jinja
@@ -19,10 +19,10 @@
 <p>There&rsquo;s a lot of information on the web about this, which may be found by searching. The <a href="https://www.eff.org/https-everywhere/deploying-https">EFF&rsquo;s guide</a> is a good starting place. <a href="https://18f.gsa.gov/">18F</a> has information about their TLS deployment standards including reusable nginx configuration files <a href="https://github.com/18F/tls-standards">on GitHub</a>.
 
 <h2>Code</h2>
-<p>The code is available on <a href="https://github.com/gutworth/httpswatch">GitHub</a> and pull requests are welcome. Join us on <a href="https://freenode.net">Freenode&rsquo;s</a> <code>#httpswatch</code> channel for discussion.
+<p>The code is available on <a href="https://github.com/fukawi2/httpswatch">GitHub</a> and pull requests are welcome. Join us on <a href="https://freenode.net">Freenode&rsquo;s</a> <code>#httpswatch</code> channel for discussion.
 
 <h2>Credits</h2>
-<p>HTTPSWatch was originally created by Benjamin Peterson. <a href="https://github.com/gutworth/httpswatch/graphs/contributors">Contributors around the world</a> now help maintain it.
+<p>HTTPSWatch was originally created by Benjamin Peterson. <a href="https://github.com/fukawi2/httpswatch/graphs/contributors">Contributors around the world</a> now help maintain it.
 
 <p>HTTPSWatch was inspired by Alex Gaynor&rsquo;s <a href="https://alexgaynor.net/2014/nov/12/state-of-news-tls/">blog</a> <a href="https://alexgaynor.net/2014/dec/30/state-of-news-tls-part-ii/">posts</a> about news sites&rsquo; HTTPS support.
 
