--- a/templates/base.html.jinja
+++ b/templates/base.html.jinja
@@ -27,7 +27,7 @@
     <div id="content-wrapper">
       {% block body %}{% endblock %}
       <footer>
-        Created by <a href="http://www.benjamin-peterson.org">Benjamin Peterson</a>. Forked by <a href="http://www.github.com/fukawi2/">Phillip Smith</a> & maintained by <a href="https://twitter.com/RedLetterSec/">@RedLetterSec</a>.<br />Last updated <time>{{ update_time }}</time>.
+        Created by <a href="http://www.benjamin-peterson.org">Benjamin Peterson</a>. Forked by <a href="http://www.github.com/fukawi2/">Phillip Smith</a>. Maintained by <a href="https://twitter.com/RedLetterSec/">@RedLetterSec</a>.<br />Last updated <time>{{ update_time }}</time>.
       </footer>
     </div>
   </body>
