Added Contact details

--- a/templates/about.html.jinja
+++ b/templates/about.html.jinja
@@ -5,6 +5,12 @@
 
 <h1>About HTTPSWatchAU</h1>
 
+<h2>Contact</h2>
+<ul class="simple-list">
+    <li>Phillip Smith - <a href="https://twitter.com/fukawi2"></a>@fukawi2</a>
+    <li>Ashley Hull - <a href="https://twitter.com/RedLetterSec"></a>@RedLetterSec</a>, <a href="mailto:Cybershambles@protonmail.ch?Subject=HTTPSWatchAU" target="_top">Cybershambles@protonmail.ch</a>
+</ul>
+
 <h2>Ratings</h2>
 <p>HTTPSWatchAU assigns every tracked site a rating approximating the quality of its HTTPS support. If a verified TLS connection cannot be established or no page can be loaded over TLS, the site is given the <span class="site-grade-bad">Bad</span> rating. The <span class="site-grade-mediocre">Mediocre</span> rating means a TLS connection can be established but there are quality issues with the site&rsquo;s implementation of HTTPS (e.g. the HTTP site doesn&rsquo;t redirect to HTTPS or the <code>Strict-Transport-Security</code> header isn&rsquo;t set). If everything looks good, a <span class="site-grade-good">Good</span> rating is given.
 
