fixed twitter links

--- a/templates/about.html.jinja
+++ b/templates/about.html.jinja
@@ -7,8 +7,8 @@
 
 <h2>Contact</h2>
 <ul class="simple-list">
-    <li>Phillip Smith - <a href="https://twitter.com/fukawi2"></a>@fukawi2</a>
-    <li>Ashley Hull - <a href="https://twitter.com/RedLetterSec"></a>@RedLetterSec</a>, <a href="mailto:Cybershambles@protonmail.ch?Subject=HTTPSWatchAU" target="_top">Cybershambles@protonmail.ch</a>
+    <li>Phillip Smith - <a href="https://twitter.com/fukawi2">@fukawi2</a>
+    <li>Ashley Hull - <a href="https://twitter.com/RedLetterSec">@RedLetterSec</a>, <a href="mailto:Cybershambles@protonmail.ch?Subject=HTTPSWatchAU" target="_top">Cybershambles@protonmail.ch</a>
 </ul>
 
 <h2>Ratings</h2>
