--- a/templates/listing.html.jinja
+++ b/templates/listing.html.jinja
@@ -28,7 +28,7 @@ window.addEventListener("load", function onLoad() {
 {% block body %}
 
 <h1>HTTPSWatchAU ({{ listing.name }})</h1>
-<p>HTTPSWatchAU tracks the HTTPS support of prominent Australian websites. Click to show details about a site&rsquo;s HTTPS support. See the <a href="/about">About page</a> for more information.
+<p>HTTPSWatchAU tracks the HTTPS support of prominent Australian websites.<br />See the <a href="/about">About page</a> for more information.
 
 <nav class="main-toc">
   <ul class="nav-list">
