--- a/templates/base.html.jinja
+++ b/templates/base.html.jinja
@@ -28,7 +28,7 @@
     <div id="content-wrapper">
       {% block body %}{% endblock %}
       <footer>
-        Created by <a href="https://benjamin.pe">Benjamin Peterson</a>. Forked by <a href="http://www.github.com/fukawi2/">Phillip Smith</a>. Maintained by <a href="https://twitter.com/RedLetterSec/">Ashley Hull</a>. <a href="/about">About page</a> for more information.<br />Last updated <time>{{ update_time }}</time>.
+        Created by <a href="https://benjamin.pe">Benjamin Peterson</a>. Forked by <a href="http://www.github.com/fukawi2/">Phillip Smith</a>. Maintained by <a href="https://twitter.com/CyberShambles">Ashley Hull</a>. <a href="/about">About page</a> for more information.<br />Last updated <time>{{ update_time }}</time>.
       </footer>
     </div>
   </body>
